# Parachute

./: CMakeCache.txt  CMakeLists.txt  Makefile  ParachuteEncoder  README.md  cmake_install.cmake  main.cpp
ParachuteEncoder_autogen/: deps  mocs_compilation.cpp
ParachuteEncoder_autogen/3JYSCEOBDA/: moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_binarywidget.cpp  moc_binarywidget.cpp.d  moc_parachutewidget.cpp  moc_parachutewidget.cpp.d
build_enhanced/: CMakeCache.txt  Makefile  ParachuteEncoder  cmake_install.cmake
build_enhanced/ParachuteEncoder_autogen/: deps  mocs_compilation.cpp
build_enhanced/ParachuteEncoder_autogen/75UR3EJMK3/: moc_BinaryWidget.cpp.d  moc_HexView.cpp  moc_HexView.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_ParachuteView.cpp  moc_ParachuteView.cpp.d
build_enhanced/ParachuteEncoder_autogen/KLZYWGTNTX/: moc_LanguageManager.cpp.d
include/model/: MessageEncoder.h  ParachuteModel.h
include/presenter/: ParachutePresenter.h
include/utils/: LanguageManager.h
include/view/: BinaryWidget.h  HexView.h  MainWindow.h  ParachuteView.h  ui_MainWindow.h
resources/: resources.qrc
resources/translations/: ar.qm  ar.ts  en.qm  en.ts  fr.qm  fr.ts
src/model/: MessageEncoder.cpp  MessageEncoder.h  ParachuteModel.cpp  ParachuteModel.h
src/presenter/: ParachutePresenter.cpp
src/utils/: LanguageManager.cpp
src/view/: BinaryWidget.cpp  BinaryWidget.h  HexView.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  ParachuteView.cpp  ParachuteView.h  ui_MainWindow.h
